--- a/package.json
+++ b/package.json
@@ -31,8 +31,12 @@
   },
   "dependencies": {
     "jquery": "^2.1.4",
+    "lowdb": "^0.10.0",
+    "q": "^1.4.1",
     "react": "^0.13.3",
     "react-router": "^0.13.3",
-    "underscore": "^1.8.3"
+    "reflux": "^0.2.8",
+    "underscore": "^1.8.3",
+    "underscore-db": "^0.9.0"
   }
 }
